@@ -2,6 +2,8 @@
  * Implemented some basic user administration features.
  * Added new rate plans with support for user administration.
  * Wrote a tool for manually updating a user's rate plan: tools/set_plan.py
+ * Refactored some of the client-side form-handling code to cut down on
+   special-case hacks.
 
 1.3.40: May 27, 2008
  * Added some minor product page tweaks like meta description tags.
